; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-loop-stop.c_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-loop-stop.c_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_handle = common dso_local global i32 0, align 4
@timer_called = common dso_local global i32 0, align 4
@num_ticks = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @timer_handle
  %5 = zext i1 %4 to i32
  %6 = call i32 @ASSERT(i32 %5)
  %7 = load i32, i32* @timer_called, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @timer_called, align 4
  %9 = load i32, i32* @timer_called, align 4
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = call i32 (...) @uv_default_loop()
  %13 = call i32 @uv_stop(i32 %12)
  br label %22

14:                                               ; preds = %1
  %15 = load i32, i32* @timer_called, align 4
  %16 = load i32, i32* @num_ticks, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %14
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @uv_timer_stop(i32* %19)
  br label %21

21:                                               ; preds = %18, %14
  br label %22

22:                                               ; preds = %21, %11
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_stop(i32) #1

declare dso_local i32 @uv_default_loop(...) #1

declare dso_local i32 @uv_timer_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
